--- a/SidCatUI/SidCatUI/MainWindow.xaml
+++ b/SidCatUI/SidCatUI/MainWindow.xaml
@@ -5,8 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SidCatUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525"
+        Background="Azure">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition ToolTip="Betalningssättnummer" Height="39"/>
+            <RowDefinition ToolTip="Benämning" Height="39"/>
+            <RowDefinition ToolTip="Funktion" Height="39"/>
+            <RowDefinition ToolTip="Kontonummer" Height="39"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition ToolTip="Ledtexter" Width="103*"/>
+            <ColumnDefinition ToolTip="Input-fält" Width="276*"/>
+            <ColumnDefinition ToolTip="Knappar" Width="138*"/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Column="0" Grid.Row="2" Content="Funktion:" Grid.ColumnSpan="2" Margin="10,10,273,30" Grid.RowSpan="2"/>
+        <Label Grid.Column="0" Grid.Row="3" Content="Kontonr:" Grid.ColumnSpan="2" Margin="10,10,273,-10"/>
+
+        <Label Grid.Column="0" Grid.Row="0" Content="Betalnr:" Margin="10,7,0,7"/>
+        <TextBox x:Name="tbPaymentMethodNum" Grid.Column="1" HorizontalAlignment="Left" Height="22" Margin="10,9,0,9" TextWrapping="Wrap" VerticalAlignment="Center" Width="30" BorderThickness="3"/>
+        <Button x:Name="btnNew" Content="F2=Ny/Sök" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" Margin="0,9,10,9" VerticalAlignment="Center" Width="112" Height="22"/>
+        <Button x:Name="btnPrevious" Content="PgUp=Föregående" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" Margin="0,9,10,9" VerticalAlignment="Center" Width="112" Height="22"/>
+
+        <Label Grid.Column="0" Grid.Row="1" Content="Benämning:" Grid.ColumnSpan="2" Margin="10,10,273,30" Grid.RowSpan="2"/>
+        <Button x:Name="btnNext" Content="PgDn=Nästa" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" Margin="0,9,10,9" VerticalAlignment="Center" Width="112" Height="22"/>
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
+            <TextBox x:Name="tbDescription" HorizontalAlignment="Left" Height="22" Margin="10,9,0,9" TextWrapping="Wrap" VerticalAlignment="Center" Width="160" BorderThickness="3"/>
+            <CheckBox Content="Spärrat" Width="90" Margin="10"/>
+        </StackPanel>
     </Grid>
 </Window>
