--- a/SidCatUI/SidCatUI/MainWindow.xaml
+++ b/SidCatUI/SidCatUI/MainWindow.xaml
@@ -9,6 +9,52 @@
         Height="360" MinHeight="360"
         Width="525" MinWidth="525"
         Background="Azure">
+    <Window.Resources>
+        <ControlTemplate x:Key="MyButtonTemplate" TargetType="{x:Type Button}">
+            <Grid>
+                <Border x:Name="thisborder" CornerRadius="10" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}"/>
+                <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}"/>
+            </Grid>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Background" TargetName="thisborder">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Offset="0.3" Color="LightBlue"/>
+                                <GradientStop Offset="1" Color="DarkBlue"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="BorderBrush">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="0,1" EndPoint="0,0">
+                                <GradientStop Offset="0.3" Color="LightBlue"/>
+                                <GradientStop Offset="1" Color="DarkBlue"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="true">
+                    <Setter Property="Background" TargetName="thisborder">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Offset="0.3" Color="LightGray"/>
+                                <GradientStop Offset="1" Color="DarkGray"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="BorderBrush">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="0,1" EndPoint="0,0">
+                                <GradientStop Offset="0.3" Color="LightGray"/>
+                                <GradientStop Offset="1" Color="DarkGray"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </Window.Resources>
     <Viewbox Stretch="Fill">
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid.RowDefinitions>
@@ -34,7 +80,7 @@
                          ToolTip="Betalningssättnummer 1 - 99. Betalnummer 1 är alltid kontant."/>
                 <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4" ToolTip="Betalningssättet får ej användas vid betalning.">Spärrat</CheckBox>
             </StackPanel>
-            <Button x:Name="btnPrevious" Content="PgUp=Föregående" Grid.Column="2" Grid.Row="0" Margin="4" Width="112" ToolTip="Bläddrar till föregående post."/>
+            <Button x:Name="btnPrevious" BorderThickness="2" Template="{StaticResource MyButtonTemplate}" Content="PgUp=Föregående" Grid.Column="2" Grid.Row="0" Margin="4" Width="112" ToolTip="Bläddrar till föregående post."/>
 
             <Label Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="4" VerticalAlignment="Center">Benämning:</Label>
             <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Stretch">
