--- a/SidCatUI/SidCatUI/MainWindow.xaml
+++ b/SidCatUI/SidCatUI/MainWindow.xaml
@@ -12,7 +12,7 @@
     <Window.Resources>
         <ControlTemplate x:Key="MyButtonTemplate" TargetType="{x:Type Button}">
             <Grid>
-                <Border x:Name="thisborder" CornerRadius="10" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}"/>
+                <Border x:Name="thisborder" CornerRadius="2" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}"/>
                 <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}"/>
             </Grid>
             <ControlTemplate.Triggers>
@@ -20,8 +20,8 @@
                     <Setter Property="Background" TargetName="thisborder">
                         <Setter.Value>
                             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                <GradientStop Offset="0.3" Color="LightBlue"/>
-                                <GradientStop Offset="1" Color="DarkBlue"/>
+                                <GradientStop Offset="0.3" Color="Yellow"/>
+                                <GradientStop Offset="1" Color="Orange"/>
                             </LinearGradientBrush>
                         </Setter.Value>
                     </Setter>
@@ -29,7 +29,7 @@
                         <Setter.Value>
                             <LinearGradientBrush StartPoint="0,1" EndPoint="0,0">
                                 <GradientStop Offset="0.3" Color="LightBlue"/>
-                                <GradientStop Offset="1" Color="DarkBlue"/>
+                                <GradientStop Offset="1" Color="Blue"/>
                             </LinearGradientBrush>
                         </Setter.Value>
                     </Setter>
@@ -39,7 +39,7 @@
                         <Setter.Value>
                             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                 <GradientStop Offset="0.3" Color="LightGray"/>
-                                <GradientStop Offset="1" Color="DarkGray"/>
+                                <GradientStop Offset="1" Color="Gray"/>
                             </LinearGradientBrush>
                         </Setter.Value>
                     </Setter>
@@ -47,7 +47,7 @@
                         <Setter.Value>
                             <LinearGradientBrush StartPoint="0,1" EndPoint="0,0">
                                 <GradientStop Offset="0.3" Color="LightGray"/>
-                                <GradientStop Offset="1" Color="DarkGray"/>
+                                <GradientStop Offset="1" Color="Gray"/>
                             </LinearGradientBrush>
                         </Setter.Value>
                     </Setter>
@@ -80,14 +80,14 @@
                          ToolTip="Betalningssättnummer 1 - 99. Betalnummer 1 är alltid kontant."/>
                 <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4" ToolTip="Betalningssättet får ej användas vid betalning.">Spärrat</CheckBox>
             </StackPanel>
-            <Button x:Name="btnPrevious" BorderThickness="2" Template="{StaticResource MyButtonTemplate}" Content="PgUp=Föregående" Grid.Column="2" Grid.Row="0" Margin="4" Width="112" ToolTip="Bläddrar till föregående post."/>
+            <Button x:Name="btnPrevious" Grid.Column="2" Grid.Row="0" Template="{StaticResource MyButtonTemplate}" Content="PgUp=Föregående" Margin="4" Width="112" ToolTip="Bläddrar till föregående post."/>
 
             <Label Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="4" VerticalAlignment="Center">Benämning:</Label>
             <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Stretch">
                 <TextBox x:Name="tbDescription" HorizontalAlignment="Left" Height="22" Margin="4" Width="200" BorderThickness="3" VerticalAlignment="Center"
                          ToolTip="Betalsättsbenämning, max 15 tecken"/>
             </StackPanel>
-            <Button x:Name="btnNext" Grid.Column="2" Grid.Row="1" Margin="4" Width="112" ToolTip="Bläddrar till nästa post.">PgDn=Nästa</Button>
+            <Button x:Name="btnNext" Grid.Column="2" Grid.Row="1" Template="{StaticResource MyButtonTemplate}" Margin="4" Width="112" ToolTip="Bläddrar till nästa post.">PgDn=Nästa</Button>
 
             <Label Grid.Column="0" Grid.Row="2" Margin="4" HorizontalAlignment="Left" VerticalAlignment="Center">Funktion:</Label>
             <ComboBox Grid.Column="1" Grid.Row="2" Margin="4" SelectedIndex="0">
@@ -127,21 +127,21 @@
             <Label Grid.Column="0" Grid.Row="5" Margin="4" HorizontalAlignment="Left" VerticalAlignment="Center">Referens:</Label>
             <CheckBox x:Name="cbReferenceRequired" Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left"
                       ToolTip="Referens måste anges i betalningfönstret med detta betalningsmedel. (Motsats: Referensnummer krävs inte, går inte heller att ange.)"/>
-            <Button Grid.Column="2" Grid.Row="5" Margin="4" ToolTip="Utskrift på rapportskrivare.">F5=Utskrift</Button>
+            <Button Grid.Column="2" Grid.Row="5" Template="{StaticResource MyButtonTemplate}" Margin="4" ToolTip="Utskrift på rapportskrivare.">F5=Utskrift</Button>
 
             <Label Grid.Column="0" Grid.Row="6" Margin="4" HorizontalAlignment="Left" VerticalAlignment="Center">Kassalåda:</Label>
             <CheckBox x:Name="cbCashBox" Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left" 
                       ToolTip="Ansluten kassalåda öppnas efter det att hela köpbeloppet betalats. (Motsats: Kassalådan öppnas inte. Kan dock öppnas manuellt.) Aktiveras normalt för alla betalningsmedel utom Firmakort."/>
-            <Button x:Name="btnHistory" Grid.Column="2" Grid.Row="6" Margin="4" Width="112" ToolTip="Visar historik över utförda ändringar.">F7=Historik</Button>
+            <Button x:Name="btnHistory" Grid.Column="2" Grid.Row="6" Template="{StaticResource MyButtonTemplate}" Margin="4" Width="112" ToolTip="Visar historik över utförda ändringar.">F7=Historik</Button>
 
             <Label Grid.Column="0" Grid.Row="7" Margin="4" HorizontalAlignment="Left" VerticalAlignment="Center">Kassarapport:</Label>
             <CheckBox x:Name="cbCashReport" Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left"
                       ToolTip="Betalning skall summeras under Redovisat belopp på kassarapport, t ex kontant och kuponger."/>
 
-            <Button x:Name="btnEscape" Grid.Column="0" Grid.Row="8" Margin="4" Width="112" ToolTip="Stänger fönstret. Om osparat data ställs en kontrollfråga.">Esc=Stäng</Button>
-            <Button x:Name="btnDelete" Grid.Column="1" Grid.Row="8" HorizontalAlignment="Left" Margin="4" Width="112" ToolTip="Radera post. Innan post raderas visas frågan, 'Skall posten raderas?'">F6=Radera</Button>
-            <Button x:Name="btnNew" Grid.Column="1" Grid.Row="8" HorizontalAlignment="Right" Margin="4" Width="112" ToolTip="Registrera ny post, eller sök post.">F2=Ny/Sök</Button>
-            <Button x:Name="btnSave" Grid.Column="2" Grid.Row="8" HorizontalAlignment="Center" Margin="4" Width="112" ToolTip="Spara post. Är grå om behörighet saknas">F3=Spara</Button>
+            <Button x:Name="btnEscape" Grid.Column="0" Grid.Row="8" Template="{StaticResource MyButtonTemplate}" Margin="4" Width="112" ToolTip="Stänger fönstret. Om osparat data ställs en kontrollfråga.">Esc=Stäng</Button>
+            <Button x:Name="btnDelete" Grid.Column="1" Grid.Row="8" Template="{StaticResource MyButtonTemplate}" HorizontalAlignment="Left" Margin="4" Width="112" ToolTip="Radera post. Innan post raderas visas frågan, 'Skall posten raderas?'">F6=Radera</Button>
+            <Button x:Name="btnNew" Grid.Column="1" Grid.Row="8" Template="{StaticResource MyButtonTemplate}" HorizontalAlignment="Right" Margin="4" Width="112" ToolTip="Registrera ny post, eller sök post.">F2=Ny/Sök</Button>
+            <Button x:Name="btnSave" Grid.Column="2" Grid.Row="8" Template="{StaticResource MyButtonTemplate}" HorizontalAlignment="Center" Margin="4" Width="112" ToolTip="Spara post. Är grå om behörighet saknas">F3=Spara</Button>
 
             <!--<Label x:Name="lblWindowWidth" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" Content="{Binding Width, ElementName=myWindow}" />
         <Label x:Name="lblWindowHeight" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="{Binding Height, ElementName=myWindow}" />-->
